--- a/style.css
+++ b/style.css
@@ -91,3 +91,12 @@ footer {
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.9%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
+.favorite-event {
+    background-color: #fffacd;
+    border: 2px solid #ffd700;
+}
+
+.social-media a {
+    margin-left: 10px;
+}
