--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ footer {
 }
 
 .favorite-event {
-    background-color: #fffacd;
+    background-color: #fffacda1;
     border: 2px solid #ffd700;
 }
 
@@ -120,4 +120,9 @@ footer {
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
+}
+
+h3.smaller-heading {
+    font-size: 1.25rem;
+    font-weight: bold;
 }
