--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 .custom-navbar {
     background-color: #0066cc;
+    padding: 10px 0;
 }
 
 .custom-navbar .navbar-nav .nav-link {
@@ -80,12 +81,37 @@ footer {
 
 .navbar-toggler {
     border-color: #fff;
+    padding: .25rem .75rem;
 }
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.9%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+@media (max-width: 991px) {
+    .navbar-brand {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .club-name {
+        font-size: 18px;
+        margin-top: 5px;
+    }
+
+    .navbar-toggler {
+        display: block;
+    }
+
+    .navbar-collapse {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #0066cc;
+        padding: 15px;
+    }
+}
 .favorite-event {
     background-color: #fffacda1;
     border: 2px solid #ffd700;
