--- a/style.css
+++ b/style.css
@@ -1,36 +1,10 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
-    background-repeat: repeat;
 }
 
-.custom-navbar {
-    background-color: #0066cc;
-    padding: 10px 0;
-}
-
-.custom-navbar .navbar-nav .nav-link {
-    transition: color 0.3s;
-    font-weight: bold;
-}
-
-.custom-navbar .navbar-nav .nav-link:hover {
-    color: #ffcc00;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
-}
-
-.club-name {
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
+.navbar-brand span {
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 section {
@@ -79,40 +53,6 @@ footer {
     margin-top: 10px;
 }
 
-.navbar-toggler {
-    border-color: #fff;
-    padding: .25rem .75rem;
-}
-
-.navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.9%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
-
-@media (max-width: 991px) {
-    .navbar-brand {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    .club-name {
-        font-size: 18px;
-        margin-top: 5px;
-    }
-
-    .navbar-toggler {
-        display: block;
-    }
-
-    .navbar-collapse {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background-color: #0066cc;
-        padding: 15px;
-    }
-}
-
 .social-media a {
     margin-left: 10px;
 }
@@ -137,19 +77,9 @@ footer {
     margin-bottom: 20px;
 }
 
-h3.smaller-heading {
-    font-size: 1.25rem;
-    font-weight: bold;
-}
-
-.btn-success, .btn-info {
-    margin-right: 10px;
-}
-
-.mt-3 {
-    margin-top: 1rem;
-}
-
-.ml-2 {
-    margin-left: 0.5rem;
+@media (max-width: 991px) {
+    .navbar-brand span {
+        font-size: 18px;
+        margin-top: 5px;
+    }
 }
